--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -43,6 +43,9 @@
     border-color: var(--fc-now-indicator-color,rgba(94, 157, 251,.4));
 
 }
+.fc .fc-bg-event .fc-event-title{
+    color:green;
+}
 
 /*
 i wish this required CSS was better documented :(
