--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1718,4 +1718,9 @@ video {
 }@media (min-width: 1280px) {.xl\:w-9\/12 {
     width: 75%;
   }
+
+}
+#imgUser{
+    height: 70px;
+    width: 70px;
 }
