--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4687,7 +4687,7 @@ textarea.form-control-lg {
 }
 
 .alert-primary {
-  --bs-alert-color: #084298;
+  --bs-alert-color: #00bed8;
   --bs-alert-bg: #cfe2ff;
   --bs-alert-border-color: #b6d4fe;
 }
